# Educational-practice

./: CMakeLists.txt  GraphData.cpp  README.md  Report.docx  imgui.ini  main.cpp  УЧПРАКТИКА_4343_ГИЗАТОВ_ЯР.docx  УЧПРАКТИКА_4343_СТАРИКОВ_НС.docx  УЧПРАКТИКА_4343_ТОЛМАЧЕВ_ИА.docx
core/: disjoint_set.cpp  disjoint_set.h  genetic_algorithm.cpp  genetic_algorithm.h  graph.h  main.cpp
data/: GraphData.cpp  GraphData.h  graph.txt
file/: graph.txt
gui/: g_alg.cpp  g_alg.h  globals.cpp  globals.h  gui.cpp  gui.h
src/: 1.cpp  imgui.ini
